GradleUtils Shared stricter impl details, Gradle 9, Java 17
Dedicated `#report` and `#throwing` in enhanced problems

Add enhanced plugin #rootProjectDirectory

Documentation and shit